--- a/index.html
+++ b/index.html
@@ -20,19 +20,20 @@
             </ul>
         </nav>
         <ul>
-            <li><a href="e-mail">info@devstudio.com</a></li>
-            <li><a href="tel">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
     <main>
         <section>
             <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button>Замовити послугу</button>
+            <button type="button">Замовити послугу</button>
         </section>
     </main>
 
     <section>
+        <h2>Наші переваги</h2>
         <ul>
             <li>
                 <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -75,22 +76,22 @@
         <ul>
             <li>
                 <img src="images/photo.jpg" alt="Ігор Дем'яненко" width="270">
-                <h4>Ігор Дем'яненко</h4>
+                <h3>Ігор Дем'яненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
                 <img src="images/photo-2.jpg" alt="Ольга Рєпіна" width="270">
-                <h4>Ольга Рєпіна</h4>
+                <h3>Ольга Рєпіна</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
                 <img src="images/photo-3.jpg" alt="Микола Тарасов" width="270">
-                <h4>Микола Тарасов</h4>
+                <h3>Микола Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
                 <img src="images/photo-4.jpg" alt="Михайло Єрмаков" width="270">
-                <h4>Михайло Єрмаков</h4>
+                <h3>Михайло Єрмаков</h3>
                 <p>UI Designer</p>
             </li>
         </ul>
@@ -99,12 +100,15 @@
     <footer>
         <a href="/">
             WebStudio
-         </a>
-         <address>м. Київ, пр-т Лесі Українки, 26</address> 
-         <ul>
-            <li><a href="e-mail">info@devstudio.com</a></li>
-            <li><a href="tel">+38 096 111 11 11</a></li>
-        </ul>
+        </a>
+        
+        <address>
+            <ul>
+                <li><a href="https://goo.gl/maps/fyVQW1wVVdpxyoAL6" target="_blank"  rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a> </li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
     </footer>
     
 </body>
