--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-            <li><img src="images/img.jpg" alt="фото1" width="370" ></li>
-            <li><img src="images/img-2.jpg" alt="фото2" width="370" ></li>
-            <li><img src="images/img-3.jpg" alt="фото3" width="370" ></li>
+            <li><img src="images/img.jpg" alt="фото1" width="370"/></li>
+            <li><img src="images/img-2.jpg" alt="фото2" width="370"/></li>
+            <li><img src="images/img-3.jpg" alt="фото3" width="370"/></li>
         </ul>
     </section>
 
@@ -75,22 +75,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="images/photo.jpg" alt="Ігор Дем'яненко" width="270">
+                <img src="images/photo.jpg" alt="Ігор Дем'яненко" width="270"/>
                 <h3>Ігор Дем'яненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="images/photo-2.jpg" alt="Ольга Рєпіна" width="270">
+                <img src="images/photo-2.jpg" alt="Ольга Рєпіна" width="270"/>
                 <h3>Ольга Рєпіна</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="images/photo-3.jpg" alt="Микола Тарасов" width="270">
+                <img src="images/photo-3.jpg" alt="Микола Тарасов" width="270"/>
                 <h3>Микола Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="images/photo-4.jpg" alt="Михайло Єрмаков" width="270">
+                <img src="images/photo-4.jpg" alt="Михайло Єрмаков" width="270"/>
                 <h3>Михайло Єрмаков</h3>
                 <p>UI Designer</p>
             </li>
@@ -110,6 +110,7 @@
             </ul>
         </address>
     </footer>
+    
     
 </body>
 </html>
