--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="/">
+            <a href="./index.html">
                WebStudio
             </a>
        
@@ -98,7 +98,7 @@
     </section>
 
     <footer>
-        <a href="/">
+        <a href="./index.html">
             WebStudio
         </a>
         
